data/derived/sp14/progs/unify/prog3692.ml.out
Characters 75-89:
  | h::t -> h + sumList(t);;
            ^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
